  * Reenable patches/any/cvs-resolv-different-nameserver.diff. Add 
    patches/any/submitted-resolv-assert.diff to fix assertion triggered by the
    previous patch.  Closes: #535504, #602291.
  * Add support for s390x.
  * Fix debhelper.in/libc.NEWS with the right option to pass to gcc. Closes:
    #629819.

  [ Jeremie Koenig ]
  * Add debian/libc0.3.symbols.hurd-i386.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 10 Jul 2011 22:01:11 +0200

eglibc (2.13-10) unstable; urgency=low

  * control.in/main: tag libc-bin Essential: yes.
  * Revert patch to make libc6-dev multiarch.  Closes: #632667.
  * Add patches/alpha/submitted-statfs64.patch to fix statvfs() on alpha.
    Closes: #324051.

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 04 Jul 2011 22:02:35 +0200

eglibc (2.13-9) unstable; urgency=low

  [ Samuel Thibault ]
  * patches/README: Add "unsubmitted" category.
  * Rename most local hurd-i386 patches into unsubmitted.
  * patches/hurd-i386/submitted-PTRACE_CONTINUE.diff: New patch from Jeremy
    Koenig, to fix initialized value.
  * patches/hurd-i386/submitted-ldsodefs.h.diff: Update to latest submitted
    version, enable. Closes: #630180.

  [ Aurelien Jarno ]
  * debhelper.in/libc.preinst: replace unbreakable space by normal space.
    Closes: #632453.
  * Disable patches/any/cvs-resolv-different-nameserver.diff. Closes: #632273, 
    #632252. Reopen: #535504, #602291.
  * kfreebsd/local-sysdeps.diff: update to revision 3530 (from glibc-bsd).
    Closes: #632452.
  * debhelper.in/libc.preinst: only check for already unpacked versions of the
    libc during upgrades.  Closes: #632190, #632509.
  * Install arch dependent headers in the multiarch include directory, patch by
    Marcin Juszkiewicz. Tag libc*-dev as Multi-Arch: same.
  * Add patches/powerpc/submitted-ifunc.diff to fix build on powerpc.

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 04 Jul 2011 01:50:25 +0200

eglibc (2.13-8) unstable; urgency=low

  [ Samuel Thibault ]