@@ -15,7 +15,8 @@ Section: libdevel
 Priority: optional
 Depends: libc6-amd64 (= ${binary:Version}), libc6-dev (= ${binary:Version}), ${misc:Depends}
 Recommends: gcc-multilib
-Replaces: amd64-libs-dev (<= 1.2)
+Conflicts: libc6-dev (<< 2.13-11)
+Replaces: amd64-libs-dev (<= 1.2), libc6-dev (<< 2.13-11)
 Provides: lib64c-dev
 Description: Embedded GNU C Library: 64bit Development Libraries for AMD64
  Contains the symlinks and object files needed to compile and link programs
