@@ -15,7 +15,8 @@ Architecture: amd64
 Section: libdevel
 Priority: optional
 Provides: lib32c-dev
-Conflicts: libc6-i386 (<= 2.9-18)
+Conflicts: libc6-i386 (<= 2.9-18), libc6-dev (<< 2.13-11)
+Replaces: libc6-dev (<< 2.13-11)
 Depends: libc6-i386 (= ${binary:Version}), libc6-dev (= ${binary:Version}), ${misc:Depends}
 Recommends: gcc-multilib
 Description: Embedded GNU C Library: 32-bit development libraries for AMD64
