@@ -13,6 +13,8 @@ Architecture: ppc64
 Section: libdevel
 Priority: optional
 Provides: lib32c-dev
+Conflicts: libc6-dev (<< 2.13-11)
+Replaces: libc6-dev (<< 2.13-11)
 Depends: libc6-powerpc (= ${binary:Version}), libc6-dev (= ${binary:Version}), ${misc:Depends}
 Recommends: gcc-multilib
 Description: Embedded GNU C Library: 32bit powerpc development libraries for ppc64
