@@ -13,6 +13,8 @@ Architecture: s390x
 Section: libdevel
 Priority: optional
 Provides: lib32c-dev
+Conflicts: libc6-dev (<< 2.13-11)
+Replaces: libc6-dev (<< 2.13-11)
 Depends: libc6-s390 (= ${binary:Version}), libc6-dev (= ${binary:Version}), ${misc:Depends}
 Recommends: gcc-multilib
 Description: Embedded GNU C Library: 32bit Development Libraries for IBM zSeries
