@@ -14,6 +14,8 @@ Architecture: sparc
 Section: libdevel
 Priority: optional
 Provides: lib64c-dev
+Conflicts: libc6-dev (<< 2.13-11)
+Replaces: libc6-dev (<< 2.13-11)
 Depends: libc6-sparc64 (= ${binary:Version}), libc6-dev (= ${binary:Version}), ${misc:Depends}
 Recommends: gcc-multilib
 Description: Embedded GNU C Library: 64bit Development Libraries for UltraSPARC
