@@ -31,14 +31,10 @@ i386_slibdir = /lib32
 i386_libdir = /usr/lib32
 
 define libc6-dev-i386_extra_pkg_install
-mkdir -p debian/libc6-dev-i386/usr/include/gnu
-cp -af debian/tmp-i386/usr/include/i486-linux-gnu/gnu/stubs-32.h \
-	debian/libc6-dev-i386/usr/include/gnu
-mkdir -p debian/libc6-dev-i386/usr/include/sys
-cp -af debian/tmp-i386/usr/include/i486-linux-gnu/sys/elf.h \
-	debian/libc6-dev-i386/usr/include/sys
-cp -af debian/tmp-i386/usr/include/i486-linux-gnu/sys/vm86.h \
-	debian/libc6-dev-i386/usr/include/sys
+mkdir -p debian/libc6-dev-i386/usr/include
+ln -s x86_64-linux-gnu/gnu debian/libc6-dev-i386/usr/include/gnu
+ln -s x86_64-linux-gnu/sys debian/libc6-dev-i386/usr/include/sys
+ln -s x86_64-linux-gnu/bits debian/libc6-dev-i386/usr/include/bits
 mkdir -p debian/libc6-dev-i386/usr/include/i486-linux-gnu
 endef
 
