@@ -61,9 +61,10 @@ cp -af debian/tmp-xen/$(libdir)/*.a \
 endef
 
 define libc6-dev-amd64_extra_pkg_install
-mkdir -p debian/libc6-dev-amd64/usr/include/gnu
-cp -af debian/tmp-amd64/usr/include/gnu/stubs-64.h \
-	debian/libc6-dev-amd64/usr/include/gnu
+mkdir -p debian/libc6-dev-amd64/usr/include
+ln -s i386-linux-gnu/gnu debian/libc6-dev-amd64/usr/include/gnu
+ln -s i386-linux-gnu/sys debian/libc6-dev-amd64/usr/include/sys
+ln -s i386-linux-gnu/bits debian/libc6-dev-amd64/usr/include/bits
 mkdir -p debian/libc6-dev-amd64/usr/include/x86_64-linux-gnu
 endef
 
