@@ -23,6 +23,9 @@ eglibc (2.13-11) UNRELEASED; urgency=low
   [ Jeremie Koenig ]
   * Add debian/libc0.3.symbols.hurd-i386.
 
+  [ Steve Langasek ]
+  * Try again to make libc6-dev multiarch-same.
+
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 10 Jul 2011 22:01:11 +0200
 
 eglibc (2.13-10) unstable; urgency=low
